--- a/package.json
+++ b/package.json
@@ -59,9 +59,11 @@
     "ethers": "^6.16.0",
     "framer-motion": "^12.23.25",
     "hono": "^4.10.7",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
     "react-day-picker": "9.11.3",
     "react-dom": "^19.2.0",
