--- a/package.json
+++ b/package.json
@@ -57,10 +57,12 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "ethers": "^6.16.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.25",
     "hono": "^4.10.7",
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.555.0",
     "next-themes": "^0.4.6",
     "qrcode.react": "^4.2.0",
@@ -81,6 +83,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/file-saver": "^2.0.7",
+    "@types/jszip": "^3.4.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
