--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -8,12 +8,12 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "dotenv": "^16.4.5",
-    "hardhat": "^2.22.2",
-    "typescript": "^5.4.3",
-    "ts-node": "^10.9.2"
+    "dotenv": "^16.6.1",
+    "hardhat": "^2.28.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@openzeppelin/contracts": "^5.4.0"
   }
 }
