--- a/blockchain/package.json
+++ b/blockchain/package.json
@@ -1,19 +1,20 @@
 {
   "name": "pharmascan-blockchain",
   "version": "1.0.0",
+  "description": "PharmaScan Smart Contracts",
   "scripts": {
     "test": "hardhat test",
     "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.ts --network amoy"
+    "deploy": "hardhat run scripts/deploy.ts"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "dotenv": "^16.6.1",
-    "hardhat": "^2.28.0",
+    "hardhat": "^2.22.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5"
   }
 }
