--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "react-hook-form": "^7.67.0",
     "react-intersection-observer": "^10.0.0",
     "react-resizable-panels": "^3.0.6",
-    "react-router": "^6.28.3",
+    "react-router-dom": "^6.30.3",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
@@ -88,6 +88,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
